# virtualGM

./: .dockerignore  .env.docker  .env.example  .env.production.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  launch.sh  prompt engineering.md  test-env-loading.sh  test_crawler.py
backend/: .dockerignore  .main.py  CACHING_GUIDE.md  CACHING_RESEARCH.md  Dockerfile  SUGGESTED_TOOLS.md  agent.py  agent_runner.py  app.py  cli.py  config.py  main.py  models.py  models_investigations.md  pyproject.toml  recording.py  schemas.py  session.py  supabase_client.py  test_agent.py  test_tps.py  tools.py  turn_engine.py  ui_cli.py
backend/agent/: __init__.py  definition.py  runner.py  tools.py
backend/api/: __init__.py  campaigns.py  dice.py  enrichment.py  level_up.py  roll_result.py  schemas.py  session_actions.py  snapshot.py  transcript_log.py  turn_engine.py
backend/campaigns/: touch-of-the-necromancer.json
backend/game/: __init__.py  models.py  session.py  test_models.py
backend/prompts/: daggerheart_rules.md  one_shot_campaign.md  simplified_one_shot_campaign.md
backend/scripts/: convert_dataset.py  render_dataset.py  tool_defs.json
backend/utils/: __init__.py  caching.py  cost.py
backend_generalist/: __init__.py  __main__.py  agent.py  cli.py  pyproject.toml  sandbox.py  tools.py  world.py
backend_generalist/social_template_world/: README.md  pc.json
backend_generalist/template_world/: README.md  pc.json
backend_generalist/tests/: test_agent.py  test_cli.py  test_information_boundary.py  test_sandbox.py  test_tools.py  test_world.py
(+494 files in other folders)
