[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.115.0",
    "firecrawl>=4.18.1",
    "logfire>=4.15.1",
    "loguru>=0.7.3",
    "pydantic-ai>=1.25.1",
    "python-dotenv>=1.0.0",
    "supabase>=2.28.3",
    "uvicorn[standard]>=0.34.0",
]
